--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -7,8 +7,9 @@
 		<title>{{ metadata.title }}{% if title %} - {{ title }}{% endif %}</title>
 		<meta name="description" content="{% if lede %}{{ lede }}{% else %}{{ metadata.description }}{% endif %}">
 
-		<link rel="stylesheet" type="text/css" href="_assets/css/layout.css">
-		<link rel="stylesheet" type="text/css" href="_assets/css/type.css">
+		<link rel="stylesheet" type="text/css" href="/_assets/css/globals.css">
+		<link rel="stylesheet" type="text/css" href="/_assets/css/layout.css">
+		<link rel="stylesheet" type="text/css" href="/_assets/css/type.css">
 	</head>
 	<body>
 
@@ -37,8 +38,8 @@
 		</footer>
 
 		<script>
-			if('serviceWorker' in navigator && window.location.hostname !== "localhost" ) {
-				//navigator.serviceWorker.register('/service-worker.js?{{ metadata.build }}');
+			if( 'serviceWorker' in navigator /* && window.location.hostname !== "localhost" */ ) {
+				navigator.serviceWorker.register('sw.js');
 			}
 		</script>
 
