--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -31,8 +31,10 @@
 			</div>
 		</main>
 
-		<footer class="site-foot">
 
+		<footer class="site-foot">
+			<p>Built with <a href="https://www.11ty.io/">Eleventy</a>. The source is available on <a href="https://github.com/Wilto/hire.wil.to">GitHub</a>.</p>
+			<p>For questions, comments, or problems using the site, <a href="https://github.com/Wilto/hire.wil.to/issues">report an issue</a>.</p>
 		</footer>
 
 		<script>
