--- a/_src/_templates/section.njk
+++ b/_src/_templates/section.njk
@@ -3,7 +3,7 @@
 		<h2 class="section-hed txt-shaded" id="latest-{{ section.data.pageClass }}">{{ section.data.title | safe }}</h2>
 	</div>
 	{% if section.data.img %}
-	<img src="/_assets/img/{{ section.data.img }}"{% if section.data.fullbleed %} class="fullbleed"{% endif %}>
+	<img src="/_assets/img/{{ section.data.img }}"{% if section.data.fullbleed %} class="fullbleed"{% endif %} alt="{{ section.data.alt}}">
 	{% endif %}
 	<div class="copy">
 		{{ section.data.content | safe }}
