--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -13,6 +13,16 @@
 		<meta name="application-name" content="{{ data.title }}">
 		<link rel="manifest" href="/webappmanifest.json">
 
+		<!-- Icons, platform-specific theme stuff, etc.: -->
+		<link rel="apple-touch-icon-precomposed" sizes="152x152" href="/_assets/img/icon-152.png">
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/_assets/img/icon-144.png">
+		<link rel="apple-touch-icon-precomposed" sizes="120x120" href="/_assets/img/icon-120.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/_assets/img/icon-114.png">
+		
+		<meta name="msapplication-TileImage" content="/_assets/img/icon-144.png">
+
+		<link rel="icon" type="image/png" href="/_assets/img/icon-32.png" sizes="32x32">
+
 		<!-- Half my site’s transfer is in `meta` nonsense. -->
 		<script type="application/ld+json">
 			{
@@ -28,7 +38,7 @@
 			}
 		</script>
 
-		<!-- Twitter Card Stuff: -->
+		<!-- Twitter/Slack cards: -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="@wilto">
 		<meta name="twitter:creator" content="@wilto">
@@ -37,8 +47,8 @@
 		<meta property="og:title" content="{{ data.title }}">
 		<meta property="og:url" content="{{ data.url }}">
 
-		<meta name="twitter:description" content="{{ data.description }}">
-		<meta property="og:description" content="{{ data.description }}">
+		<meta name="twitter:description" content="{{ lede }}">
+		<meta property="og:description" content="{{ lede }}">
 
 
 		<meta name="twitter:image" content="{{ data.url }}/_assets/img/card.gif">
