--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -20,7 +20,7 @@
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/_assets/img/icon-114.png">
 		
 		<meta name="msapplication-TileImage" content="/_assets/img/icon-144.png">
-
+		<meta name="theme-color" content="#6d252e">
 		<link rel="icon" type="image/png" href="/_assets/img/icon-32.png" sizes="32x32">
 
 		<!-- Half my site’s transfer is in `meta` nonsense. -->
@@ -62,7 +62,7 @@
 	</head>
 	<body>
 
-		<img src="_assets/img/w.svg" class="w-logo">
+		<img src="_assets/img/w.svg" class="w-logo" alt="">
 		<main role="main" id="main"{% if templateClass %} class="{{ templateClass }}"{% endif %}>
 
 			<div class="body">
