--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -98,5 +98,22 @@
 			}
 		</script>
 
+
+		<script>
+			var _paq = _paq || [];
+			_paq.push(['trackPageView']);
+			_paq.push(['enableLinkTracking']);
+			(function() {
+				if( !navigator.onLine ) {
+					return;
+				}
+				var u="https://analytics.wiltomakesfood.com/";
+				_paq.push(['setTrackerUrl', u+'piwik.php']);
+				_paq.push(['setSiteId', '4']);
+				
+				var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+				g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+			})();
+		</script>
 	</body>
 </html>
