--- a/_src/_assets/css/resume.css
+++ b/_src/_assets/css/resume.css
@@ -186,8 +186,13 @@
 	.copy {
 		padding-bottom: 1em;
 	}
+	.sub.sub-indie {
+		margin-top: .5em;
+	}
 	.sub.sublede {
-		margin-bottom: .5em;
+		font-size: 1;
+		margin-bottom: 0 !important;
+		padding: 1em 0; !important;
 	}
 	.site-foot {
 		display: none;
