...A little perf tuning.

--- a/_src/_assets/css/type.css
+++ b/_src/_assets/css/type.css
@@ -31,6 +31,7 @@
         url('/_assets/fonts/TiemposTextWeb-RegularItalic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
+    font-display: swap;
 }
 
 /* Tiempos Headline */
