--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -59,7 +59,7 @@
 		<meta name="author" content="{{ data.author.name }}">
 
 		<style>
-			{{ critcss.getCSS('/_site/_assets/css/crit/all.css') | safe }}</style>
+			{{ critcss.getCSS('/_assets/css/crit/all.css') | safe }}</style>
 		</style>
 
 		<link rel="stylesheet" href="/_assets/css/all.css" media="print" onload="this.media='all'">
