--- a/_src/_assets/css/layout.css
+++ b/_src/_assets/css/layout.css
@@ -62,7 +62,7 @@ main .body {
 	margin-top: 0;
 }
 
-.sub img {
+.sub picture {
 	display: block;
 	margin: 1.5em auto 1em auto;
 	width: 100%;
@@ -70,23 +70,23 @@ main .body {
 	clear: both;
 }
 @media( min-width: 31em ) {
-	.sub img {
+	.sub picture {
 		width: auto;
 		max-width: 25em;
 	}
 }
 
-.sub img.fullbleed {
+.sub picture.fullbleed {
 	max-width: 130%;
 	width: 130%;
 	margin-left: -15%;
 }
 @media( min-width: 46.875em ) {
-	.sub img {
+	.sub picture {
 		margin: 1.5em auto 1em 5%;
 		float: right;
 	}
-	.sub img.fullbleed {
+	.sub picture.fullbleed {
 		width: auto;
 		margin-left: 2.5%;
 		max-width: 45em;
@@ -120,18 +120,18 @@ main .body {
 
 @supports( shape-margin: 1px ) {
 	@media( min-width: 46.875em ) {
-		.sub img {
+		.sub picture {
 			shape-margin: 5%;
 			z-index: -1;
 		}
-		.sub.sub-books img { shape-outside: url(/_assets/img/books.png); }
-		.sub.sub-work img { shape-outside: url(/_assets/img/work.png); }
+		.sub.sub-books picture { shape-outside: url(/_assets/img/books.webp); }
+		.sub.sub-work picture { shape-outside: url(/_assets/img/work.webp); }
 	}
 }
 
 @supports( display: grid ) {
 	@media( min-width: 35em ) {
-		.sub:nth-of-type(odd) img {
+		.sub:nth-of-type(odd) picture {
 			grid-column: 1; 
 			grid-row: 1 / -1;
 			align-self: center;
@@ -166,7 +166,7 @@ main .body {
 		.sub .copy {
 			grid-column: 1 / 2;
 		}
-		.sub img {
+		.sub picture {
 			grid-column: 2; 
 			grid-row: 1 / -1;
 			align-self: center;
