--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -61,8 +61,10 @@
 		<style>
 			{{ critcss.getCSS('/_assets/css/crit/all.css') | safe }}
 		</style>
-
 		<link rel="stylesheet" href="/_assets/css/all.css" media="print" onload="this.media='all'">
+		<noscript>
+			<link rel="stylesheet" href="/_assets/css/all.css">
+		</noscript>
 	</head>
 	<body>
 
