--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -106,7 +106,7 @@
 
 		<script>
 			if( 'serviceWorker' in navigator ) {
-				//navigator.serviceWorker.register('sw.js');
+				navigator.serviceWorker.register('sw.js');
 			}
 		</script>
 	</body>
