--- a/_src/_assets/css/type.css
+++ b/_src/_assets/css/type.css
@@ -110,10 +110,12 @@ p {
 
 /* Gradient background effect */
 .txt-shaded {
+    /*
     background: linear-gradient(-175deg,#cb4335 0%,#10093b 82.5%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: rgba(0,0,0,.15);
+    */
 }
 
 /* Hed/Subhed */
@@ -192,7 +194,7 @@ ul,
 ol {
     list-style: none;
     font-family: Tiempos, serif;
-    padding: 0;
+    padding: 0; 
     margin: 0;
 }
 ul li,
