--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -64,7 +64,7 @@
 		<link rel="preload" href="/_assets/fonts/AdelleSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
 
 		<style>
-			{{ critcss.getCSS('/_assets/css/crit/all.css') | safe }}
+			{{ critcss.getCSS('_src/_assets/css/crit.css') | safe }}
 		</style>
 		<link rel="stylesheet" href="/_assets/css/all.css" media="print" onload="this.media='all'">
 		<noscript>
