--- a/_src/_assets/css/globals.css
+++ b/_src/_assets/css/globals.css
@@ -27,14 +27,14 @@ img {
 }
 
 a {
-	color: #6d252e;
+	color: #cb4335;
 	transition: color .15s linear, -webkit-text-fill-color .15s linear, text-decoration-color .5s linear;
 	text-decoration: none;
 	border-bottom: 1px solid  #12073f;
 }
 a:hover {
 	border-bottom-color: #cb4335;
-	color: #cb4335;
+	color: #6d252e;
 	cursor: pointer;
 	text-decoration: none;
 }
@@ -43,24 +43,26 @@ a:hover {
 		text-decoration: underline;
 		text-decoration-color: #12073f;
 		border-bottom: none;
+		transition: color text-decoration-color .35s linear, text-decoration-color .5s linear;
 	}
 	a:hover {
 		text-decoration: underline;
 		text-decoration-color: #cb4335;
 		border-bottom: none;
 	}
+	@media( prefers-color-scheme: dark ) {
+		a {
+			color: #cb4335;
+			transition: color .15s linear, -webkit-text-fill-color .15s linear, text-decoration-color .5s linear;
+			text-decoration: underline;
+			text-decoration-color: rgba(25,25,25,1);
+
+		}
+		a:hover {
+			text-decoration-color: rgba(25,25,25,.5);
+			cursor: pointer;
+			text-decoration: none;
+		}
+	}
 }
 
-@media (prefers-color-scheme: dark) {
-	a {
-		color: #cb4335;
-		transition: color .15s linear, -webkit-text-fill-color .15s linear, text-decoration-color .5s linear;
-		text-decoration: none;
-		border-bottom: 1px solid  #12073f;
-	}
-	a:hover {
-		border-bottom-color: #cb4335;
-		cursor: pointer;
-		text-decoration: none;
-	}
-}
