--- a/_src/_templates/section.njk
+++ b/_src/_templates/section.njk
@@ -1,11 +1,18 @@
-<section class="sub sub-{{  section.data.pageClass }}" role="region" aria-labelledby="section-{{  section.data.pageClass }}">
+<section class="sub sub-{{ section.data.pageClass }}" role="region" aria-labelledby="section-{{  section.data.pageClass }}">
 	<div class="section-head">
 		<h2 class="section-hed" id="section-{{ section.data.pageClass }}">{{ section.data.title | safe }}</h2>
 	</div>
 	{% if section.data.img %}
+	{% if section.data.imgmask %}
+	<style>
+		.sub.sub-{{ section.data.pageClass }} picture {
+			shape-outside: url( /_assets/img/{{ section.data.imgmask }} );
+		}
+	</style>
+	{% endif %}
 	<picture{% if section.data.fullbleed %} class="fullbleed"{% endif %}>
-		<source type="image/webp" srcset="/_assets/img/{{ section.data.img }}.webp">
-		<img src="/_assets/img/{{ section.data.img }}.png" alt="{{ section.data.alt}}"{% if section.data.fullbleed %} width="716" height="427"{% else %} width="392" height="350"{% endif %} loading="lazy">
+		<source type="image/webp" srcset="/_assets/img/{{ section.data.img }}">
+		<img src="/_assets/img/{{ section.data.imgfallbk }}" alt="{{ section.data.alt}}"{% if section.data.fullbleed %} width="716" height="427"{% else %} width="392" height="350"{% endif %} loading="lazy">
 	</picture>
 	{% endif %}
 	<div class="copy">
