--- a/_src/_templates/section.njk
+++ b/_src/_templates/section.njk
@@ -6,7 +6,7 @@
 	{% if section.data.imgmask %}
 	<style>
 		.sub.sub-{{ section.data.pageClass }} picture {
-			shape-outside: url( /_assets/img/{{ section.data.imgmask }} );
+			shape-outside: url("/_assets/img/{{ section.data.imgmask }}");
 		}
 	</style>
 	{% endif %}
