I have a better feeling about this approach.

--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -66,9 +66,9 @@
 			{{ critcss.getCSS('_src/_assets/css/crit.css') | safe }}
 		</style>
 		{% endif %}
-		<link rel="stylesheet" href="/_assets/css/all.css" media="print" onload="this.media='all'">
+		<link rel="stylesheet" href="/_assets/css/nofonts.css" media="print" onload="this.media='all'">
 		<noscript>
-			<link rel="stylesheet" href="/_assets/css/all.css">
+			<link rel="stylesheet" href="/_assets/css/nofonts.css">
 		</noscript>
 	</head>
 	<body>
