--- a/_src/_templates/base.njk
+++ b/_src/_templates/base.njk
@@ -96,8 +96,26 @@
 
 
 		<footer class="site-foot">
-			<p>Built with <a href="https://www.11ty.io/">Eleventy</a>. The source is available on <a href="https://github.com/Wilto/hire.wil.to">GitHub</a>.</p>
-			<p>For questions, comments, or problems using the site, <a href="https://github.com/Wilto/hire.wil.to/issues">report an issue</a>.</p>
+			<address class="me">
+				<dl class="me">
+					<div>
+						<dt>GitHub</dt>
+						<dd><a rel="me" href="https://github.com/wilto">https://github.com/<b>wilto</b></a></dd>
+					</div>
+					<div>
+						<dt>Twitter</dt>
+						<dd><a rel="me" href="https://twitter.com/wilto">https://twitter.com/<b>wilto</b></a></dd>
+					</div>
+					<div>
+						<dt>Mastodon</dt>
+						<dd><a rel="me" href="https://front-end.social/@wilto">https://front-end.social/@<b>wilto</b></a></dd>
+					</div>
+				</dl>
+			</address>
+			<div class="site-meta">
+				<p>Built with <a href="https://www.11ty.io/">Eleventy</a>. The source is available on <a href="https://github.com/Wilto/hire.wil.to">GitHub</a>.</p>
+				<p>For questions, comments, or problems using the site, <a href="https://github.com/Wilto/hire.wil.to/issues">report an issue</a>.</p>
+		</div>
 		</footer>
 
 		<script>
